# clase-RPS

./: .gitignore  README.md  pyproject.toml
src/: RPS_Implementacion.py
src/rps/: RPS_Implementacion.py  RPS_LizzardSpock.py
src/test/: test_rps.py  test_rpsls.py
