[project]
name = "rps"
version = "0.1.0"
description = "Piedra-Papel-Tijera-Lagarto-Spock con IA reflexiva"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=9.0.2",
]

[dependency-groups]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rps"]
